# Homa

./: .gitignore  Cargo.toml  Homa_Architecture_and_Implementation_Plan.md  README.md  deny.toml  node.toml.example
.github/workflows/: release-gates.yml
deploy/docker/: Dockerfile  docker-compose.devnet.yml
deploy/logrotate/: homa-node
deploy/systemd/: homa-node.service
docs/runbooks/: backup_restore.md  bootstrap.md  incident_triage.md  key_rotation.md  recovery.md  restart.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: block_payload.rs  gossipsub_tx_payload.rs  sync_chunk_payload.rs
scripts/: release_gate.sh
src/: lib.rs  main.rs
src/consensus/: leader.rs  mod.rs  pow.rs  stake.rs
src/core/: block.rs  fork_choice.rs  genesis.rs  indexer.rs  mempool.rs  mempool_checkpoint.rs  mod.rs  recovery.rs  state.rs  sync.rs  transaction.rs
src/crypto/: address.rs  keys.rs  mod.rs
src/network/: checkpoint_rotation.rs  mod.rs  p2p.rs  reputation.rs  runtime_loop.rs  runtime_policy.rs  sync_engine.rs  sync_runtime.rs
src/node/: cli.rs  config.rs  daemon.rs  mod.rs  rpc.rs
src/observability/: mod.rs
src/wallet/: cli.rs  mod.rs
tests/: chaos_integration.rs  partition_chaos_fuzzer.rs
