[package]
name = "homa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.homa]
path = ".."

[[bin]]
name = "gossipsub_tx_payload"
path = "fuzz_targets/gossipsub_tx_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_payload"
path = "fuzz_targets/block_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sync_chunk_payload"
path = "fuzz_targets/sync_chunk_payload.rs"
test = false
doc = false
bench = false
